<resources>
    <string name="app_name">Code Community</string>
    <string name="btn_login_text">Log in</string>
    <string name="btn_signUp_text">Sign Up</string>
    <string name="startup_app_logo_descr">Application logo</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="hint_email">E-mail</string>
    <string name="user_signup_confirm_password">Confirm password</string>
    <string name="btn_logout_text">Log out</string>
    <string name="standard_background">Standard background</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>