<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startup_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".view.StartupFragment">

            <ImageView
                style="@style/StandardLogo"
                android:contentDescription="@string/startup_app_logo_descr"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/StandardBtn"
                android:layout_width="200dp"
                android:text="@string/btn_login_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp_btn"
                style="@style/StandardBtn"
                android:layout_width="200dp"
                android:text="@string/btn_signUp_text"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>